Edit css to prevent text overflow in low pixel density mobile devices

--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -14,7 +14,7 @@
 }
 
 .education-card{
-    width: 400px;
+    width: 350px;
     margin: 16px;
 }
 
