--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -43,7 +43,7 @@
 
 .experience-card-information{
     max-width: 800px;
-    min-width: 400px;
+    min-width: 350px;
     overflow: hidden;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
@@ -52,13 +52,11 @@
 .experience-head{
     display: flex;
     justify-content: space-between;
-    padding-left: 15px;
-    padding-right: 10px;
 }
 
 .experience-titles{
     text-align: left;
-    padding-left: 0.5em;   
+    margin-left: 20px;   
 }
 
 .experience-pndts{
