--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -29,7 +29,7 @@
 }
 
 .project-card{
-    width: 400px;
+    width: 350px;
     margin: 16px;
 }
 
